 . Demos: Menu shows how to use padding (part of issue #249)
 . Director: Attach uses 'bounds' not 'frame' (issue #233)
 . Documentation: API doc documents free functions (issue #314)
 . Menu: an empty menu can be crated (issue #277)
 . Menu: supports padding (issue #249)
 . Menu: alignItemsVertically aligns items on the center of the screen (issue #315)
 . Particles: Use by default fire.pvr (issue #276)
 . Particles: resetSystem actually resets the system (issue #252)
 . Particles: texture is a property (issue #282)
 . Scheduler: improved timer performance (issue #309)
 . SoundSupport: supports vorbis codec (issue #XXX)      <------------- XXX CREATE ISSUE XXX
 . ccArray: a fast alternative to NSMutableArray (issue #304)
 . TextureAtlas: fixed colorarray memory leak (issue #272)
 . TextureAtlas: support for insert,remove,reorder (issue #275)
 . TextureAtlas: free indices correctly when out of memory (issue #293)
 . TextureAtlas: resizeCapacity returns BOOL instead of raise exception (issue #294)
 . TextureNode: texture is "retain" not "assign" (issue #230 and issue #274)
 . TileMapAtlas: supports fullpath (issue #220)
 . XCode project: added class model (issue #312)
 
version 0.7.1 - 20-Mar-2009
 . Actions: added tags to actions (issue #222)
 . Actions: Spawns can be Speeded (issue #257)
 . Actions: Speed can be altered in runtime (part of issue #236)
 . AtlasSprite: Sprite sheet implementation (issue #238)
 . Chipmunk: cpVect is defined as a CGPoint (issue #260)
 . CocosNode: Camera is lazy alloced (issue #94)
 . CocosNode: addChild, removeChild:cleanup, getChildByTag family functions (issue #253)
 . CocosNode: added better comments, cleanup code (issue #219)
 . CocosNode: added RGB protocol: Atlas,Texture & ColorLayer conforms it (issue #234)
 . CocosNode: fixed memory leak when removeAndStop a node with children with actions (issue #254)
 . CocosNode: added transform local to world coordinates that supports rotation,scale & position (issue #207)